cabal-version:       2.4
name:                toml-benchmarks
version:             0.0.0.0
synopsis:            Benchmarks for Haskell TOML decoding and encoding libraries
description:         Benchmarks for Haskell TOML decoding and encoding libraries
homepage:            https://github.com/kowainik/toml-benchmarks
bug-reports:         https://github.com/kowainik/toml-benchmarks/issues
license:             MPL-2.0
license-file:        LICENSE
author:              Dmitrii Kovanikov, Veronika Romashkina, Vladislav Sabanov
maintainer:          Kowainik <xrom.xkov@gmail.com>
copyright:           2019 Kowainik
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.4.4
                     GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/kowainik/toml-benchmarks.git

common common-options
  build-depends:       base >= 4.11.1.0 && < 4.14

  ghc-options:         -Wall
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wcompat
                       -Widentities
                       -Wredundant-constraints
                       -fhide-source-paths
                       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8.1)
    ghc-options:       -Wmissing-deriving-strategies
                       -Werror=missing-deriving-strategies

  default-language:    Haskell2010
  default-extensions:  ConstraintKinds
                       DeriveGeneric
                       GeneralizedNewtypeDeriving
                       InstanceSigs
                       KindSignatures
                       LambdaCase
                       OverloadedStrings
                       RecordWildCards
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeApplications
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     TomlBenchmarks


benchmark toml-benchmarks-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs

  build-depends:       gauge ^>= 0.2.5
                     , toml-benchmarks

  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
